<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ic_bg"
    android:gravity="center_horizontal"
    android:layout_height="match_parent"
    android:padding="40dp"
    tools:context=".Result">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:layout_margin="8dp"
        android:text="@string/result"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_trophymdpi"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/congrats"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:layout_marginBottom="30sp"/>
    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginBottom="18sp"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_marginBottom="20sp"/>
    <Button
        android:id="@+id/finish_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        android:textColor="@color/purple_500"
        android:textSize="20sp"
        android:background="@drawable/finish_button"
        app:backgroundTint="@color/white"/>

</LinearLayout>