<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizQuestions">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ques"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/Question"
            android:textSize="20sp"
            android:textColor="?attr/colorOnSurface"
            />
        <ImageView
            android:id="@+id/flag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_flag_of_argentina"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:contentDescription="@string/flag_image" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:layout_weight="1"
                android:progress="1"
                android:max="10"
                android:indeterminate="false"
                style="?android:attr/progressBarStyleHorizontal"
                />
            <TextView
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/progress"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center"
                android:textSize="12sp"
                android:layout_marginStart="10dp" />

        </LinearLayout>
        <TextView
            android:id="@+id/option1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text=""
            android:gravity="center"
            android:background="@drawable/default_option_view"
            android:padding="16dp"
            android:textColor="#A9A9A9"
            android:textSize="18sp"
            />
        <TextView
            android:id="@+id/option2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text=""
            android:gravity="center"
            android:background="@drawable/default_option_view"
            android:padding="16dp"
            android:textColor="#A9A9A9"
            android:textSize="18sp"
            />
        <TextView
            android:id="@+id/option3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text=""
            android:gravity="center"
            android:background="@drawable/default_option_view"
            android:padding="16dp"
            android:textColor="#A9A9A9"
            android:textSize="18sp"
            />
        <TextView
            android:id="@+id/option4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text=""
            android:gravity="center"
            android:background="@drawable/default_option_view"
            android:padding="16dp"
            android:textColor="#A9A9A9"
            android:textSize="18sp"
            />
        <Button
            android:id="@+id/submitAndNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/submit"
            android:padding="16dp"
            android:textSize="18sp"/>
    </LinearLayout>

</ScrollView>